Updates response serializers
