# docs/api.yml
@@ -3103,7 +3103,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Login'
+                $ref: '#/components/schemas/RestrictedUser'
           description: ''
   /authentication/logout/:
     post:
@@ -3117,7 +3117,11 @@ paths:
       - cookieAuth: []
       responses:
         '200':
-          description: No response body
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LogoutResult'
+          description: ''
   /authentication/whoami/:
     get:
       operationId: authentication_whoami_retrieve
@@ -8432,6 +8436,12 @@ components:
       required:
       - password
       - username
+    LogoutResult:
+      type: object
+      properties:
+        detail:
+          type: string
+          default: Successfully logged out.
     Membership:
       type: object
       description: Object serializer for the `Membership` model.
